summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value Direction
    setDirection(Direction.WEST);avance();prendBiscuit();setDirection(Direction.EAST);avance()
                 ^Moria:3: error: not found: value Direction
    setDirection(Direction.WEST);avance();prendBiscuit();setDirection(Direction.EAST);avance()
                                                                      ^