summative.moria.Moria.scala.code
def moria(){
  while (!estSurBiscuit()){
    setDirection(Direction.WEST);avance();prendBiscuit();setDirection(Direction.EAST);avance()
  }
  
}